improve footer buttons; abbreviate CAMBA; fix language spacing

--- a/src/index.less
+++ b/src/index.less
@@ -215,9 +215,9 @@ body {
             cursor: pointer;
             font-weight: @boldWeight;
 
-            padding: .5em 1.5em;
+            padding: .5em .75em;
             margin: .2em;
-            min-width: 90px;
+            min-width: 118px;
 
             border-radius: 2em;
             border: 2px solid white;
@@ -284,7 +284,7 @@ body {
                 margin: 0 1px;
                 line-height: 25px;
 
-                &:nth-child(2) {
+                &:nth-of-type(1) {
                     margin-left: 3px;
                 }
             }
